--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,15 @@ import ARCLogoSVG from '~/assets/images/branding/ARCblue.svg'
 import {Image} from 'astro:assets';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 import { getCollection } from 'astro:content';
+import NextEventBanner from '~/components/events/NextEventBanner.tsx';
 
 const mainPageCards = await getCollection('mainpagecards');
+const events = await getCollection('events');
 
 ---
 <Layout title="DataPLANT - Home">
   <div class="flex flex-col flex-grow place-content-center">
+    <NextEventBanner events={events} client:load/>
     <div class="hero bg-base-200 min-h-[90vh]">
       <div class="hero overlay">
         <Image src={ARCLogoSVG} alt="ARC Logo" class="mx-auto md:hidden opacity-30"/>
