--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ const events = await getCollection('events');
       </Fragment>
     </CallToAction>
     <div class="mx-auto w-full max-w-6xl pb-10 md:px-2 lg:py-12 lg:px-8">
-      <div class="grid lg:grid-rows-5 grid-cols-1 gap-5 lg:gap-24">
+      <div class="grid lg:grid-rows-5 grid-cols-1 md:gap-5 lg:gap-24">
           {
             mainPageCards
             .sort((a,b) => a.data.index - b.data.index)
