Improve footer and menu handling :sparkles:

--- a/src/components/navbar/Menu.astro
+++ b/src/components/navbar/Menu.astro
@@ -19,10 +19,10 @@ const menuArray = Array.isArray(menu) ? menu : [menu];
 <ul class:list={[className]} class="lg:min-w-max" tabindex="0">
   {menuArray.map((entry: RecursiveMenu) => (
     <li class="flex-row">
-      <span class="w-full">
+      <a href={entry.slug} class:list={[{"underline": (currentPathWithoutTrailingBackslash === entry.slug)}, "decoration-primary"]} class="w-full">
         { entry.icon && <Icon name={entry.icon} class="w-4 h-4 !text-secondary inline"></Icon>} 
-        <a href={entry.slug} class:list={[{"underline": (currentPathWithoutTrailingBackslash === entry.slug)}, "decoration-primary"]}>{entry.title}</a>
-      </span>
+        {entry.title}
+      </a>
       {entry.children ? (
         <Astro.self menu={entry.children} isOpen={isOpen} class:list={[className]}/>
       ) : (
