--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const events = await getCollection('events');
       ]}
     >
       <Fragment slot="title">
-        <span style='font-family: "Shadows Into Light Two", cursive;'>DataPLANT</span>
+        <span style='font-family: "shadows_into_light_tworegular";' class="tracking-wide !font-extrabold">DataPLANT</span>
       </Fragment>
 
       <Fragment slot="subtitle">
