--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'shadows_into_light_tworegular';
   src: url('/src/assets/fonts/shadowsintolighttwo-regular-webfont.woff2') format('woff2');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
