add matrix to socials

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,6 +9,7 @@ import { Icon } from 'astro-icon/components';
 
 const socials = [
   { title: 'GitHub', slug: URLS.SOCIAL_GITHUB, icon: "tabler:brand-github"},
+  { title: "Matrix", slug: URLS.SOCIAL_MATRIX, icon: "tabler:brand-matrix"},
   { title: 'YouTube', slug: URLS.SOCIAL_YOUTUBE, icon: "tabler:brand-youtube" },
   { title: 'Twitter-X', slug: URLS.SOCIAL_TWITTER, icon: "tabler:brand-x" },
   { title: "Bluesky", slug: URLS.SOCIAL_BLUESKY, icon: "tabler:brand-bluesky" },
