--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -22,12 +22,13 @@ export const MainNav: RecursiveMenu[] = [
     title: 'Tools',
     slug: '/toolbox',
     children: [
-      { title: 'ARCitect', slug: 'https://nfdi4plants.org/nfdi4plants.knowledgebase/docs/ARCitect-Manual/index.html' },
+      { title: 'ARCitect', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/arcitect/' },
       { title: 'Swate', slug: 'https://swate-alpha.nfdi4plants.org/' },
       { title: 'DataPLAN', slug: 'https://dmpg.nfdi4plants.org/' },
       { title: 'ARCManager', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/docs/ARCmanager-manual/00_index.html' },
     ]
   },
+  { title: 'Knowledge Base', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/' },
 ]
 
 ---
