change knowledge base in navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -28,7 +28,7 @@ export const MainNav: RecursiveMenu[] = [
       { title: 'ARCManager', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/docs/ARCmanager-manual/00_index.html' },
     ]
   },
-  { title: 'Knowledge Base', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/' },
+  { title: 'Knowledge Base', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/start-here/' },
 ]
 
 ---
