adapt arc manager KB link

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,7 +25,7 @@ export const MainNav: RecursiveMenu[] = [
       { title: 'ARCitect', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/arcitect/' },
       { title: 'Swate', slug: 'https://swate-alpha.nfdi4plants.org/' },
       { title: 'DataPLAN', slug: 'https://dmpg.nfdi4plants.org/' },
-      { title: 'ARCManager', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/docs/ARCmanager-manual/00_index.html' },
+      { title: 'ARCManager', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/arc-manager/' },
     ]
   },
   { title: 'Knowledge Base', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/start-here/' },
