--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,6 +11,7 @@ export const MainNav: RecursiveMenu[] = [
     { title: 'About Us', slug: '/about' },
     { title: 'Information', slug: '/information'},
     { title: 'RDM As A Service', slug: '/rdm-as-a-service' },
+    { title: 'Toolbox', slug: '/toolbox' },
     { title: 'Participation', slug: '/participation' },
     { title: 'Resources', slug: '/resources' },
     { title: 'Support', slug: '/support' },
