Add tools in navbar :sparkles:

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -23,6 +23,8 @@ export const MainNav: RecursiveMenu[] = [
     title: 'Tools',
     children: [
       { title: 'ARCitect', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/arcitect/' },
+      { title: 'arc-vs-code', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/guides/vs-code-extension/' },
+      { title: 'Excel Add-In', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/guides/annotate-in-excel/' },
       { title: 'Swate', slug: 'https://swate-alpha.nfdi4plants.org/' },
       { title: 'DataPLAN', slug: 'https://dmpg.nfdi4plants.org/' },
       { title: 'ARCManager', slug: 'https://nfdi4plants.org/nfdi4plants.knowledgebase/arc-manager/' },
