fix broken link :bug:

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,7 +30,7 @@ export const MainNav: RecursiveMenu[] = [
       { title: 'ARCManager', slug: 'https://nfdi4plants.org/nfdi4plants.knowledgebase/arc-manager/' },
     ]
   },
-  { title: 'Knowledge Base', slug: 'https://www.nfdi4plants.de/nfdi4plants.knowledgebase/start-here/' },
+  { title: 'Knowledge Base', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/' },
 ]
 
 ---
