add support to navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -31,6 +31,7 @@ export const MainNav: RecursiveMenu[] = [
     ]
   },
   { title: 'Knowledge Base', slug: 'https://nfdi4plants.github.io/nfdi4plants.knowledgebase/' },
+  { title: 'Support', slug: '/support' },
 ]
 
 ---
