--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -92,13 +92,21 @@ export const MainNav: RecursiveMenu[] = [
         </svg>
       </span>
     </NavButton>
-    <NavButton href={URLS.HELPDESK} props={{title: "Helpdesk"}}> 
-      <span>
+    <div class="dropdown dropdown-hover dropdown-end">
+      <NavButton props={{title: "Support"}}>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon-size" aria-hidden="true" focusable="false" viewBox="0 0 512 512" >
           <path fill="currentColor" d="M191.1 224c0-17.72-14.34-32.04-32-32.04L144 192c-35.34 0-64 28.66-64 64.08v47.79C80 339.3 108.7 368 144 368H160c17.66 0 32-14.36 32-32.06L191.1 224zM256 0C112.9 0 4.583 119.1 .0208 256L0 296C0 309.3 10.75 320 23.1 320S48 309.3 48 296V256c0-114.7 93.34-207.8 208-207.8C370.7 48.2 464 141.3 464 256v144c0 22.09-17.91 40-40 40h-110.7C305 425.7 289.7 416 272 416H241.8c-23.21 0-44.5 15.69-48.87 38.49C187 485.2 210.4 512 239.1 512H272c17.72 0 33.03-9.711 41.34-24H424c48.6 0 88-39.4 88-88V256C507.4 119.1 399.1 0 256 0zM368 368c35.34 0 64-28.7 64-64.13V256.1C432 220.7 403.3 192 368 192l-16 0c-17.66 0-32 14.34-32 32.04L320 335.9C320 353.7 334.3 368 352 368H368z"/>
         </svg>
-      </span>
-    </NavButton>
+      </NavButton>
+      <Menu 
+        isOpen={true} 
+        menu={[
+          { title: "Helpdesk", slug: URLS.HELPDESK, icon: "tabler:message-circle-question"},
+          { title: "Matrix Support Channel", slug: URLS.SOCIAL_MATRIX, icon: "tabler:brand-matrix"},
+          { title: "User Support Meeting", slug: "events/arc-user-support", icon: "tabler:calendar-stats"},
+        ]} 
+        className="dropdown-content menu bg-base-100 text-base-content lg:border-r-2 min-h-full w-80 p-4 menu-sm"></Menu>
+    </div>
     <NavButton props={{title: "E-Mail"}} href="javascript:location='mailto:\u0069\u006e\u0066\u006f\u0040\u006e\u0066\u0064\u0069\u0034\u0070\u006c\u0061\u006e\u0074\u0073\u002e\u006f\u0072\u0067';void 0">
       <!-- http://www.email-obfuscator.com -->
       <span class="navbar-item" title="E-Mail" >
