add how-to-cite page

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,6 +15,8 @@ export const MainNav: RecursiveMenu[] = [
     { title: 'Participation', slug: '/participation' },
     { title: 'Resources', slug: '/resources' },
     { title: 'Support', slug: '/support' },
+    { title: 'Citing DataPLANT', slug: '/articles/citing' },
+
   ]},
   { title: 'News', slug: '/news' },
   { title: 'Events', slug: '/events' },
