add link to member page to navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -16,6 +16,8 @@ export const MainNav: RecursiveMenu[] = [
     { title: 'Resources', slug: '/resources' },
     { title: 'Support', slug: '/support' },
     { title: 'Citing DataPLANT', slug: '/articles/citing' },
+    { title: 'Meet our Members', slug: '/member' },
+
 
   ]},
   { title: 'News', slug: '/news' },
